# oomtm

./: .gitignore  LICENSE  README.md  pyproject.toml
src/oomtm/: __init__.py  go.py  nova.py  pdf.py  reports.py  sharepoint.py
