[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oomtm"
version = "0.2.0"
description = "Shared library for MTM (Aarhus Kommune) OpenOrchestrator processes — SharePoint, GO, Nova, PDF tooling."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ITK Development", email = "itk-rpa@mkb.aarhus.dk" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "requests >= 2.31",
    "requests-ntlm >= 1.3",
    "Office365-REST-Python-Client >= 2.5",
    "certifi >= 2024.2",
    "cryptography >= 42.0",
    "pytz >= 2024.1",
]

[project.optional-dependencies]
# PDF conversion paths (oomtm.pdf). Office conversion also needs LibreOffice
# installed on the machine (not a pip dependency).
pdf = [
    "Pillow >= 10.0",
    "extract-msg >= 0.48",
    # Drives the locally-installed Microsoft Office (Word/Excel/PowerPoint) via
    # COM for high-fidelity PDF export; Windows only. Falls back to LibreOffice
    # when Office or pywin32 is absent.
    "pywin32 >= 306; sys_platform == 'win32'",
]
dev = [
    "pylint",
    "flake8",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oomtm = ["py.typed"]
